Verbessert, erbitte um Meinung eines dritten

--- a/diplomarbeit/abstract.tex
+++ b/diplomarbeit/abstract.tex
@@ -1,11 +1,11 @@
 \section*{Kurzfassung} \todo{Kontrolle}
 
-Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten die relevant für KFZ-Fahrer sind. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagno- stikport kommuniziert wird, und der selbst entwickelte Car-PC, werden passende Darstellungen geboten die zeigen wie gut ein Fahrer fährt. 
-Durch die modulare Umsetzung des Car-PCs kann zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erst- Verarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen. 
+Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten, die für einen KFZ-Fahrenden interessant sein könnten. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagno- stikport kommuniziert wird, und der selbst entwickelte Car-PC, werden passende Darstellungen geboten, welche den Fahrstil des Nutzenden wiederspiegelt. 
+Durch die modulare Umsetzung des Car-PCs kann zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erstverarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen. 
 
-Präzise, einfach zu verstehende Darstellung und Features die den Fahrstil verbessern können, sind mittels zwei Applikation entwickelt worden, wobei diese für unterschiedliche Szenarien konzipiert sind. Die erste Applikation ist entwickelt worden für Smartphone - für die Android Plattform. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für das hochladen der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers werden hier gespeichert und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu kann man mit der inkludierten Social Media Anbindung über seinen Fahrstil prahlen. 
+Präzise, einfach zu verstehende Darstellungen und Features, die den Fahrstil der Nutzenden von BestShift verbessern können, sind mittels zwei Applikationen realisiert worden, wobei diese für unterschiedliche Szenarien konzipiert sind. Die erste Applikation ist entwickelt worden für Smartphone - für die Android Plattform. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für das hochladen der Sensordaten auf den BestShift Server zuständig. Von unserem Server aus kann dann die zweite Applikation, die Web-Applikation, die benötigten Ressourcen laden und weiter verarbeiten. Es ist zu erwähnen, dass die Web-App als die primäre Speicherungsstelle dient – alle Fahrten des Fahrers werden hier gespeichert und dieser kann sich alle retrospektiv ansehen. Zusätzlich dazu kann man mit der inkludierten Social Media Anbindung über seinen Fahrstil prahlen. 
 
-Durch die Kombinationen der Hauptfeatures, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, kann man, durch numerisch wiederlegte Werte, angeben wie gut der Fahrstil eines Fahrers ist.
+Durch die Kombinationen der Hauptfeatures, Schaltvorschlag, Fahrgastkomfortanalyse, und Verbrauchsanalyse, kann man durch numerisch wiederlegte Werte, angeben wie gut der Fahrstil eines Fahrers ist.
 
 \section*{Abstract} \todo{Kontrolle}
 
