--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -572,3 +572,11 @@ note = {Accessed on 30.03.2016}
     howpublished = "\url{http://www.handelsblatt.com/auto/test-technik/messverfahren-spritverbrauch-wie-im-paradies/6329916.html}",
     note = {Accessed on 06.04.2016}
 }
+
+@misc{SIMR.CH1-fahrstil-analyse.falscherVerbrauchUS, 
+    author = {Nils-Viktor Sorge},
+    year = {2014},
+    title = {Geschönte Verbräuche: BMW muss Angaben beim Mini in den USA korrigieren},
+    howpublished = "\url{http://www.spiegel.de/auto/aktuell/geschoente-verbrauchswerte-bmw-muss-angaben-beim-mini-korrigieren-a-999742.html#ref=plista}",
+    note = {Accessed on 07.04.2016}
+}
