plus one picture

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -11,16 +11,26 @@ Die APK-Datei wird dann auf das Android-Gerät installiert.
 
 \textbf{Native vs HTML5 vs Hybrid}
 \todo{Überschrift anders?}
+\begin{wrapfigure}{r}{0.6\textwidth}
+	\centering
+	\includegraphics[width=0.3\textwidth]{images/HTML-vs-Native-vs-Hybrid}
+	\caption{Der Treibhauseffekt \cite{Faik.CH2-app-fundam}}
+\end{wrapfigure}
 Bei der Umsetzung unserer Android Applikation, hatten wir die Entscheidung, wie wir die Android App erstellen. 
 Da Android mehrere Programmierarten unterstützt musste evaluiert werden welche Programmiermodule für unsere App am Besten geeignet ist. \nextline
 
 \textbf{Native\newline} 
+Der Vorteil an Native Apps ist, das sie auf die Hardware wie z.B. Kamera und GPS zugriff haben. 
+Weiterhin ist der Verkauf nicht sehr schwer, da es auf Appstore draufgeladen werden kann. 
 Für native Apps wird auf der Android-Plattform die Sprache Java verwendet.
 Native Apps zeigen die beste Performance.
 Die Dokumentation zu Native Apps ist am Besten, da es über 2500 Bücher zur Android Entwicklung gibt.
 Für Nativ Apps werden Entwicklungsumgebungen-IDE(Integrated Developement Enviroment) verwendet um die gewünschte App zu Programmieren.\nextline
 
+
+
 \textbf{HTML5\newline} 
+Da eine HTML 5 Applikation über den Webbrowser laufen kann, sind die Entwickler nicht von AppStore oder anderen Plattformen abhängig. 
 HTML5 verwendet die Standard Web Technologien, wie JavaScript und CSS.
 HTML5 Applikationen werden über Browser abgespielt, wobei jedes Gerät auf die Browser zugreifen kann und dadurch die App auf mehreren Plattformen abgespielt werden kann. \nextline
 
