--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -580,3 +580,11 @@ note = {Accessed on 30.03.2016}
     howpublished = "\url{http://www.spiegel.de/auto/aktuell/geschoente-verbrauchswerte-bmw-muss-angaben-beim-mini-korrigieren-a-999742.html#ref=plista}",
     note = {Accessed on 07.04.2016}
 }
+
+@misc{Faik.CH2-app-fundam,
+	author = {HTML Panda},
+	year = {2014},
+	title = {Native, Hybrid or HTML5 App: Explore Features to Choose Best for Your Business},
+	howpublished = "\url{http://www.htmlpanda.com/blog/native-hybrid-or-html5-app-explore-features-to-choose-best-for-your-business/}",
+	note = {Accessed on 07.04.2016}
+}
